2014-06-23
 - back to work!
 - gb.startMenu() changed to gb.titleScreen()
	startMenuTimer now only skip it the first time it's called
 - minor bitmap speed improvement
 - font can now be dynamically changed using setFont();
 - font example added
 - font 3x5 number's changed to look more "retro"
 - sound library changes (both in gamebuino lib, excel tracker and processing player):
	note ID 63 is silent. It is named "Silence" in the excel tracker
	sound.changeInstruments(const uint16_t* const* instruments, uint8_t channel) added,
	it changes the set of instruments of a track.
	The default instrument set is 0:square wave 1:noise
 - Excel tracker
	transpose column added
	you now type note's name instead of ID (find their names in the "notes" tab)
	use "Silence" instead of a note name to mute it
 - bugs solved in the Processing sound player
2014-06-13
 - a few more "const" added and "prog_char" changed to "const char". Now actually compiles with avr-gcc > 4.6.1
2014-06-12
 - added "const" to the "font" variable for the library to compile with the latest version of avr-gcc
	but you can no longer switch between different font sizes because of conflicting var name
 - default contrast changed from 50 to 60
 - default backlight changed from 128 to 255 (new batch of Gamebuinos has dimmer LEDs)
 - bootloader updated with the last version of settings.hex
 - crabator show battery in menu fixed
 - crabator: added backlight effects when hit
2014-06-10
 - zero initilizers removed (unecessary use of flash memory)
 - loader 
	can't load non-hex files
	displays a "x" in front of non-hex files
	displays the files' size
	number of page calculation fixed
 - settings
	sub menus fixed
	added 'save' in every sub menu
 - start menu
	blinking cursor in the start menu slightly changed
	mute when "B" is held during startup (it was making a small sound during 1 frame)
	toggle volume when "B" is pressed in the startup menu
	speaker icon placement improved, adapts depending on the font size