@@ -2,12 +2,14 @@
 void updateDisplay(){
   //gb.display.print(gb.getCpuLoad());
   //draw the score
-  gb.display.setTextSize(2);
-  gb.display.setCursor(15,16);
+  gb.display.fontScale = 2;
+  gb.display.cursorX = 15;
+  gb.display.cursorY = 16;
   gb.display.print(player_score);
-  gb.display.setCursor(57,16);
+  gb.display.cursorX = 57;
+  gb.display.cursorY = 16;
   gb.display.print(oponent_score);
-  gb.display.setTextSize(1);
+  gb.display.fontScale = 1;
   //draw the ball
   gb.display.fillRect(ball_x, ball_y, ball_size, ball_size);
   //draw the player
